[package]
name = "repl"
description = "Boilerplate code for starting a REPL. Just write your code in fn process(&str)"
version = "1.0.0"
edition = "2021"
author = "abhishekshah3@gmail.com"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
